--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -1,4 +1,4 @@
-@import 'materialize.min.css';
+@import 'materialize.css';
 
 $PC: #5B8499;
 $SC: #19242A;
@@ -11,8 +11,51 @@ $SC: #19242A;
     font-size: 7rem;
 }
 
-.title {
 
+header, main, footer {
+	padding-left: 300px;
+
+    @media only screen and (max-width : 992px) {
+		padding-left: 0;
+	}
+
+}
+
+.sidenav{
+	
+	background-color: $SC;
+
+	
+	li {
+		padding-top: 15px;
+	}
+
+	li > a {
+		font-size: 14px;
+		color: #fff;
+
+		i {
+			color: #fff !important;
+		}
+	}
+
+    i {
+		color: #fff;
+	}
+
+	.input-field {
+
+		margin: 20px 7px 10px 7px;
+		border-bottom: solid 2px #9e9e9e;
+		transition: color .2s;
+		
+
+		input{
+			border-bottom-width: 0px;
+			font-size: 18px;
+			color:#fff;
+		}
+	}
 }
 
 body {
@@ -21,17 +64,6 @@ body {
 
 .nav-wrapper{
 	background: $PC;
-}
-
-.sidenav{
-	background-color: $SC;
-	color:#fff;
-	
-	
-	a{
-		color:#fff !important;
-		font-size: 15px;
-	}
 }
 
 
