--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,11 +16,13 @@ header, main, footer {
     padding-top: 15px; }
   .sidenav li > a {
     font-size: 14px;
-    color: #fff; }
+    color: #fff;
+    cursor: pointer; }
     .sidenav li > a i {
       color: #fff !important; }
   .sidenav i {
-    color: #fff; }
+    color: #fff;
+    cursor: pointer; }
   .sidenav .input-field {
     margin: 20px 7px 10px 7px;
     border-bottom: solid 2px #9e9e9e;
