--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -33,6 +33,7 @@ header, main, footer {
 	li > a {
 		font-size: 14px;
 		color: #fff;
+		cursor: pointer;
 
 		i {
 			color: #fff !important;
@@ -41,6 +42,7 @@ header, main, footer {
 
     i {
 		color: #fff;
+		cursor: pointer;
 	}
 
 	.input-field {
