updates to template

--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -11,6 +11,14 @@ $SC: #19242A;
     font-size: 7rem;
 }
 
+.sidenav-trigger{
+	display: block;
+	position: absolute;
+	top: 7%;
+	left: 5%;
+}
+
+
 
 header, main, footer {
 	padding-left: 300px;
