--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,6 +4,12 @@
   margin-bottom: 20px;
   font-size: 7rem; }
 
+.sidenav-trigger {
+  display: block;
+  position: absolute;
+  top: 7%;
+  left: 5%; }
+
 header, main, footer {
   padding-left: 300px; }
   @media only screen and (max-width: 992px) {
